tests/expectations/compiler/network/span_network.out
DCE_ENABLED:
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:4:9
     |
   4 | program parent.aleo {
     |         ^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:4:9
     |
   4 | program parent.aleo {
     |         ^^^^^^^^^^^
